# salmonless

./: .gitignore
experiments/: pyproject.toml
experiments/dataplug-sra/raw_sra_vs_fastq/: README.md  pyproject.toml
experiments/dataplug-sra/raw_sra_vs_fastq/accessibility/: Analysis.ipynb  scanner.py  script.py
experiments/dataplug-sra/raw_sra_vs_fastq/download_speed/: Analysis.ipynb
experiments/dataplug-sra/raw_sra_vs_fastq/download_speed/raw/: session.txt
experiments/dataplug-sra/raw_sra_vs_fastq/download_speed/scripts/: SRR32296246.fq.gz.sh  SRR32499888.fq.gz.sh  SRR8256072.fq.gz.sh  fastq.sh  full.sh  sra.sh
experiments/dataplug-sra/sra_vs_fastq/accessibility/: pyproject.toml
experiments/dataplug-sra/sra_vs_fastq/accessibility/raw/: test.jsonl
lithops-hpc/singularity/: salmon.def  singularity-plantilla342-3.12.def
lithops-hpc/src/: salmon.py
sra_explorer/: README.md  __init__.py  pyproject.toml  sra_explorer.py
sra_explorer/sra_explorer/: __init__.py  sra_explorer.py
sra_explorer/tests/: test_sra_explorer.py
