[tool.poetry]
name = "data-analysis-dataplug-sra"
version = "0.1.0"
description = ""
authors = ["Kamilbur <kamil.burkiewicz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.25.2"
matplotlib = "^3.10.1"
jupyterlab = "^4.3.6"
sra_explorer = {path = "../../../../sra_explorer"}
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
